log
Thu, Mar 27, 2025  5:23:13 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Thu, Mar 27, 2025  5:34:27 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:40:13: error: 'List {aka struct List}' has no member named 'first'
     if (list->first == NULL) return NULL;
             ^~
Compilation failed
69e567f
Thu, Mar 27, 2025  5:34:56 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f7f6aea
Thu, Mar 27, 2025  5:36:04 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
beadbfd
Thu, Mar 27, 2025  5:36:43 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
83a6356
Thu, Mar 27, 2025  5:38:02 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
90e283a
Thu, Mar 27, 2025  5:38:23 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
49e3c61
Thu, Mar 27, 2025  5:38:50 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a051dbd
Thu, Mar 27, 2025  5:39:51 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8bb5023
Thu, Mar 27, 2025  5:40:16 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1ca1feb
Thu, Mar 27, 2025  5:40:51 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
14d383b
Thu, Mar 27, 2025  5:41:09 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
efe75ad
Thu, Mar 27, 2025  5:42:47 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
ba74dcf
Thu, Mar 27, 2025  5:44:20 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f7e61f3
Thu, Mar 27, 2025  5:44:52 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
bbe93a3
Thu, Mar 27, 2025  5:46:06 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
687d7fb
Thu, Mar 27, 2025  5:49:08 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
4a8b18a
Thu, Mar 27, 2025  5:49:28 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9179dfe
Thu, Mar 27, 2025  5:50:26 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
0349d17
Thu, Mar 27, 2025  5:50:59 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
2b2a51f
Thu, Mar 27, 2025  5:52:08 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
695271c
Thu, Mar 27, 2025  5:52:36 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
44f13f2
Thu, Mar 27, 2025  5:53:10 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
07f8680
Thu, Mar 27, 2025  5:53:58 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 15/70
b7e6803
Thu, Mar 27, 2025  5:54:48 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
3689e99
Thu, Mar 27, 2025  5:56:02 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
f222ff4
Thu, Mar 27, 2025  5:57:31 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
9dbfd1a
Thu, Mar 27, 2025  5:59:20 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
870dd55
Thu, Mar 27, 2025  6:00:17 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
3914982
Thu, Mar 27, 2025  6:00:41 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
b0abc67
Thu, Mar 27, 2025  6:02:37 PM: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
486c85d
Thu, Mar 27, 2025  6:08:53 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
456daee
Thu, Mar 27, 2025  6:11:58 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
e06cac6
Thu, Mar 27, 2025  6:12:50 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
229d170
Thu, Mar 27, 2025  6:15:29 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
f2824d7
Thu, Mar 27, 2025  6:16:32 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
7904b5f
Thu, Mar 27, 2025  6:20:56 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
a8c7761
Sat, Mar 29, 2025 11:56:15 AM: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
a3eac3d
Sat, Mar 29, 2025 11:57:58 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
653ba28
Sat, Mar 29, 2025 11:59:08 AM: 
 list.c | 11 -----------
 1 file changed, 11 deletions(-)
 tests:  10|2
total_score: 45/70
098776c
Sat, Mar 29, 2025 12:00:58 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
dd00489
Sat, Mar 29, 2025 12:02:56 PM: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  10|2
total_score: 45/70
798da99
Sat, Mar 29, 2025 12:05:36 PM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  11|1
total_score: 55/70
4092b65
Sat, Mar 29, 2025 12:32:07 PM: 
 list.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
b22767a
Sat, Mar 29, 2025 12:34:15 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:121:9: error: 'head' undeclared (first use in this function)
  121 |         head->prev = NULL;
      |         ^~~~
list.c:121:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9f0aa66
Sat, Mar 29, 2025 12:34:27 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
c50607d
